[build-system]
requires = ["setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "trm.utils"
version = "1.0.0"
authors = [
  { name="Tom Marsh", email="t.r.marsh@warwick.ac.uk" },
]
description = "Python utility classes and functions"
readme = "README.rst"
license = {text = "BSD 3-Clause License" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]
dependencies = ["astropy", "numpy", "scipy"]

[project.urls]
"Homepage" = "hhttps://github.com/trmrsh/trm-utils"
"Bug Tracker" = "https://github.com/trmrsh/trm-utils/issues"
